# student-performance-indicator

./: README.md  pyproject.toml
artifacts/: test.csv  train.csv
src/: exception.py  logger.py
src/Components/: data_ingestion.py
